version 10: fixed card alignment and added new cards

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -35,6 +35,10 @@ a:hover {
 	}
 }
 
+.card {
+	height: calc(100%);
+}
+
 .text-shadow {
 	/*animation: color-switch-rgb 10s infinite*/
 	text-shadow: 1px 1px 15px rgba(0, 0, 0, 1);
@@ -78,7 +82,7 @@ a:hover {
 }
 
 #portfolio {
-	margin-bottom: 70px;
+	margin-bottom: 100px;
 }
 
 #contact-area, #about-area {
